# NanoFridgeThermostat

./: .gitignore  .gitmodules  README.md  Readme.md  resistor_bridge.py  thermistor_generator.py  timer_frigo.ino
Firmware/: .clang-format  CMakeLists.txt  README.md  platformio.ini
Firmware/src/: buttons.c  buttons.h  main.cpp  persistent_memory.h  timebase.c  timebase.h
Firmware/src/Core/: CMakeLists.txt  Readme.md  bridge.c  bridge.h  buffers.c  buffers.h  buttons.c  buttons.h  current.c  current.h  interpolation.c  interpolation.h  led.c  led.h  mcu_time.c  mcu_time.h  spanner.c  spanner.h  thermistor.c  thermistor.h  thermistor_ntc_100k_3950K.c
Firmware/src/Core/Filters/: logical_and.c  logical_and.h  sliding_average.c  sliding_average.h
Firmware/src/Core/Sensors/: thermistor.h
Firmware/src/Core/Tests/: CMakeLists.txt  bridge_tests.cpp  current_tests.cpp  interpolation_tests.cpp  led_tests.cpp  logical_and_tests.cpp  sliding_average_tests.cpp  spanner_tests.cpp  thermistor_tests.cpp
Firmware/src/Hal/: CMakeLists.txt  Readme.md  persistent_memory.c  timebase.c  timebase.h
Firmware/src/Math/: interpolation.c
Firmware/src/Math/Tests/: interpolation_test.cpp
Firmware/src/Thermistor/: thermistor.c
Firmware/src/Thermistor/Tests/: thermistor_test.cpp
Firmware/src/Ui/: CMakeLists.txt  image_buffer.h  numbers_small.c  numbers_small.h
Firmware/src/Ui/Tests/: CMakeLists.txt  numbers_small_tests.cpp
Firmware/ui_concepts/: AcLine_animation.pxo  AcLine_animation_smaller.pxo  BracketTopLeftCorner.kra  Compressor.kra  Compressor_animation1.pxo  Compressor_animation2.pxo  Fading_arrow.pxo  Fan_animation.pxo  Fridge.kra  Growing_arrow.pxo  NanoFridgeThermostatTitle.kra  Numbers.kra  Numbers.kra-autosave.kra  Numbers_smaller.kra  ui_concepts.kra
Firmware/ui_concepts/AcLine_animation/: AcLine_animation.pxo
Hardware/: ACCurrentsReadouts.ods  BOM.ods  Components.ods  CurrentTransformersSelection.ods
Hardware/Mechanical/: ACProtection.step  AcProtection.stl  BottomCase.step  BottomCase.stl  board-V2.0.0-assembly.FCStd  board-V2.0.0-assembly_workbench.FCStd  board-V2.0.0-assembly_workbench.FCStd1
Hardware/Mechanical/board-V2.0.0-assembly_workbench_parts/: NanoFridgeThermistat-board 1.fcstd  arduino nano.fcstd
Hardware/Mechanical/board-V2.0.0-assembly_workbench_parts/NanoFridgeThermistat-board 1_parts/: C_Disc_D10.0mm_W2.5mm_P5.00mm.fcstd  C_Disc_D3.8mm_W2.6mm_P2.50mm.fcstd  C_Disc_D4.7mm_W2.5mm_P5.00mm.fcstd  C_Disc_D4.7mm_W2.5mm_P5.00mm001.fcstd  C_Disc_D4.7mm_W2.5mm_P5.00mm002.fcstd  C_Disc_D4.7mm_W2.5mm_P5.00mm003.fcstd  C_Disc_D4.7mm_W2.5mm_P5.00mm004.fcstd  DIP-6_W7.62mm001.fcstd  DIP-8_W7.62mm001.fcstd  D_DO-35_SOD27_P7.62mm_Horizontal003.fcstd  LED_D3.0mm001.fcstd  PinSocket_1x02_P2.54mm_Vertical.fcstd  PinSocket_1x02_P2.54mm_Vertical001.fcstd  PinSocket_1x02_P2.54mm_Vertical002.fcstd  PinSocket_1x04_P2.54mm_Vertical.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal001.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal002.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal003.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal004.fcstd  R_Axial_DIN0207_L6.3mm_D2.5mm_P10.16mm_Horizontal005.fcstd  SW_PUSH_6mm001.fcstd  (+12 more)
Hardware/NanoFridgeThermistat-board/: NanoFridgeThermistat-board.kicad_pcb  NanoFridgeThermistat-board.kicad_prl  NanoFridgeThermistat-board.kicad_pro  NanoFridgeThermistat-board.kicad_sch  fp-lib-table  sym-lib-table  ~NanoFridgeThermistat-board.kicad_sch.lck
Hardware/NanoFridgeThermistat-board/3D/: RS-PRO 1243888 Current Transformer-Body.step  RS-PRO 1243888 Current Transformer-Body.stl  RS-PRO 1243888 Current Transformer-Body.wrl  RS-PRO 1243888 Current Transformer.20240202-112537.FCBak  RS-PRO 1243888 Current Transformer.FCStd  TE-Connectivity-282836-2-C-282836-2.step  TE-Connectivity-282836-2.20240202-120047.FCBak  TE-Connectivity-282836-2.FCStd  TE-Connectivity-282836-2.wrl  arduino nanoV3.wrl
Hardware/NanoFridgeThermistat-board/Gerbers/: NanoFridgeThermistat-board-B_Cu.gbr  NanoFridgeThermistat-board-B_Mask.gbr  NanoFridgeThermistat-board-B_Paste.gbr  NanoFridgeThermistat-board-B_Silkscreen.gbr  NanoFridgeThermistat-board-Edge_Cuts.gbr  NanoFridgeThermistat-board-F_Cu.gbr  NanoFridgeThermistat-board-F_Mask.gbr  NanoFridgeThermistat-board-F_Paste.gbr  NanoFridgeThermistat-board-F_Silkscreen.gbr  NanoFridgeThermistat-board-NPTH.drl  NanoFridgeThermistat-board-PTH.drl  NanoFridgeThermistat-board-job.gbrjob
Hardware/NanoFridgeThermistat-board/SymbolLibs/: CurrentTransformers.bak  CurrentTransformers.kicad_sym
Hardware/Simulations/: ACCurrentSensingAmp1.asc
NanoThermostat/: README.md  Thermistor values.ods
NanoThermostat-V2/: CMakeLists.txt  NanoThermostat-V2.ino  thermistor.c  thermistor.h  thermistor_ntc_100k_3950K.c  thermistor_ntc_100k_3950K.h
NanoThermostat-V2/Bridge/: bridge.c
NanoThermostat-V2/Bridge/Tests/: CMakeLists.txt  bridge_tests.cpp
NanoThermostat-V2/Math/: CMakeLists.txt  interpolation.c  interpolation.h
NanoThermostat-V2/Math/Tests/: CMakeLists.txt  math_test.cpp
NanoThermostat-V2/Thermistor/: thermistor.c  thermistor.h  thermistor_ntc_100k_3950K.c  thermistor_ntc_100k_3950K.h
NanoThermostat-V2/Thermistor/Tests/: CMakeLists.txt  thermistor_test.cpp
NanoThermostat-V2/math/: interpolation.c  interpolation.h
NanoThermostat-V2/src/Bridge/: CMakeLists.txt
NanoThermostat-V2/src/Bridge/Tests/: CMakeLists.txt
NanoThermostat-V2/src/Math/Tests/: CMakeLists.txt  interpolation_test.cpp
NanoThermostat-V2/src/Thermistor/: CMakeLists.txt  thermistor.h  thermistor_ntc_100k_3950K.h
NanoThermostat-V2/src/Thermistor/Tests/: CMakeLists.txt
NanoThermostat-V2/thermistor/: thermistor.c  thermistor.h  thermistor_ntc_100k_3950K.c  thermistor_ntc_100k_3950K.h
Tools/: resistor_bridge.py  thermistor_generator.py
WokwiUiTest/: platformio.ini
WokwiUiTest/include/: image_buffer.h  numbers_small.h
WokwiUiTest/src/: main.cpp  numbers_small.c
WokwiUiTest/wokwi/: diagram.json
timer_frigo_v1/: README.md  timer_frigo.ino
(+11 files in other folders)
